# CDF

./: .env  .flake8  docker-compose.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
cch_django_template/: asgi.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile
scripts/: start_local_app.sh  start_local_worker.sh
