[tool.poetry]
name = "cch-framework-django"
version = "0.1.0"
description = ""
authors = ["chchoi <ch.choi@aizen.co>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
django-cors-headers = "^3.13.0"
django-filter = "^22.1"
djangorestframework = "^3.13.1"
django-silk = "^5.0.1"
isort = "^5.10.1"
black = "^22.6.0"
redis = "^4.3.4"
uvloop = "^0.16.0"
django-celery-results = "^2.4.0"
PyJWT = "^2.4.0"
boto3 = "^1.24.35"
boto3-stubs = "^1.24.35"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
